--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -15,7 +15,8 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/BlackText"/>
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/resultChart"
@@ -36,7 +37,8 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultChart" />
+        app:layout_constraintTop_toBottomOf="@+id/resultChart"
+        style="@style/BlackText"/>
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
         android:id="@+id/suggestionChart"
