--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,10 +7,47 @@
     tools:context=".ResultActivity">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/resultText"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
-        android:text="SUH DOOD!!!"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="179dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/BlackText"/>
+
+    <com.github.mikephil.charting.charts.HorizontalBarChart
+        android:id="@+id/resultChart"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultText" />
+
+    <TextView
+        android:id="@+id/suggestionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultChart"
+        style="@style/BlackText"/>
+
+    <com.github.mikephil.charting.charts.HorizontalBarChart
+        android:id="@+id/suggestionChart"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/suggestionText" />
+
 </android.support.constraint.ConstraintLayout>
